overflow hidden on body to stop scrolling (need overflow:visible on child element to show confirm/cancel); html and css for confirm/cancel

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,6 +4,7 @@ html {
     font-size: 12pt;
     font-family: helvetica;
     text-align: left;
+    overflow: hidden;
 }
 
 *{
@@ -37,8 +38,9 @@ html {
     grid-row: 6;
     display: grid;
     grid-gap: 4px;
+
     grid-template-columns: repeat(2, 70px) repeat(6, 1fr);
-    overflow: hidden;
+    /* overflow: hidden; */
     border-radius: 10px 10px 10px 10px;
     margin-right: 10px;
     margin-left: 10px;
@@ -84,7 +86,7 @@ html {
     /* display: inline-flex; */
     display: none;
     align-items: center;
-    margin-right: 12px;
+    margin-right: 10px;
 }
 
 #alarm h2 {
@@ -97,7 +99,7 @@ html {
 }
 
 #alarm img {
-    margin-left: 12px;
+    margin-left: 10px;
     margin-right: 8px;
 }
 
@@ -231,6 +233,7 @@ html {
     border-radius: 10px;
     text-align: center;
     background: linear-gradient(180deg, #2E2E2E 0%, #1B1B1B 100%);
+    position: relative;
 }
 
 .control .title {
@@ -298,7 +301,7 @@ html {
     text-align: right;
     bottom: 30px;
     right: 0px;
-    margin-right: 12px;
+    margin-right: 10px;
     position: absolute;
 }
 
@@ -457,7 +460,6 @@ html {
 }
 
 .modeContainer {
-    position: relative;
     display: flex;
     flex-direction: column;
 }
@@ -473,6 +475,74 @@ html {
     height: 4px;
     display: block;
     margin-top: 2px;
+}
+
+.confirmCancel {
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+
+    position: absolute;
+    width: 100%;
+    height: 80px;
+    top: -86px;
+
+    background: linear-gradient(180deg, #2E2E2E 0%, #1B1B1B 100%);
+    border-radius: 10px;
+    z-index: 10;
+}
+
+.cancel {
+    display: flex;
+    flex-direction: row;
+    padding: 12px 16.5px;
+
+    position: static;
+    width: 100%;
+    height: 40px;
+    left: 0px;
+    top: 0px;
+
+    border-radius: 10px;
+
+    /* Inside Auto Layout */
+
+    flex: none;
+    order: 0;
+    align-self: flex-start;
+    margin: 0px 0px;
+}
+
+.confirm {
+    display: flex;
+    flex-direction: row;
+    padding: 12px 16.5px;
+
+    position: static;
+    width: 100%;
+    height: 40px;
+    left: 0px;
+    top: 40px;
+
+    border: 2px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 10px;
+
+    /* Inside Auto Layout */
+
+    flex: none;
+    order: 1;
+    align-self: center;
+    margin: 0px 0px;
+}
+
+.confirmCancel img {
+    flex: none;
+    order: 1;
+    align-self: center;
+    margin: 0px 0px;
+    position: absolute;
+    right: 16;
 }
 
 /* @media (min-height: 500px) {
